# JollyEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  imgui.ini  tags
.githooks/: pre-commit
documentation/dictionary/: Scenery.md
documentation/pictures/SceneryObjectHierarchy/: SceneryObjectHierarchy.pu
examples/playground/: CMakeLists.txt
examples/playground/src/: Playground.cpp
res/shaders/: basic.shader
resc/shaders/: basic.shader
src/: .Application.cpp.swp  Application.cpp  ApplicationConfig.h  ApplicationConfig.h.in  CMakeLists.txt  CameraManager.cpp  CameraManager.h  ComponentManager.cpp  ComponentManager.h  Entity.cpp  Entity.h  GuiManager.cpp  GuiManager.h  IEntity.h  IndexBuffer.cpp  IndexBuffer.h  JollyGame.cpp  JollyGame.h  MeshInstanceManager.cpp  MeshInstanceManager.h  Object.cpp  Object.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Painter.cpp  Painter.h  Renderer.cpp  Renderer.h  RenderingContext.cpp  RenderingContext.h  SelectionManager.cpp  SelectionManager.h  Shader.cpp  Shader.h  ShaderFactory.cpp  ShaderFactory.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  (+6 more)
src/Camera/: Camera.cpp  Camera.h
src/Geometry/: Geometry.cpp  Geometry.h  GeometryPrimitiveFactory.cpp  GeometryPrimitiveFactory.h  GeometryPrimitiveType.h  GeometryStore.cpp  GeometryStore.h
src/IndexBuffer/: IndexBuffer.cpp  IndexBuffer.h
src/Mesh/: Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshPrimitive.h  MeshPrimitiveFactory.cpp  MeshPrimitiveFactory.h  MeshPrimitiveType.h  MeshStore.cpp  MeshStore.h
src/Painter/: Painter.h  Test.cpp
src/Renderer/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGlRenderer.cpp  OpenGlRenderer.h  Renderer.cpp  Renderer.h
src/Rendering/: IndexBuffer.h  OpenGlRenderer.cpp  OpenGlRenderer.h  ShaderFactory.cpp  ShaderFactory.h  VertexBuffer.cpp
src/Rendering/Shader/: BasicShader.cpp  BasicShader.h  Shader.h
src/Scenery/: Camera.cpp  Camera.h  Movable.h  Object.cpp  Object.h  Prop.cpp  Prop.h  Rotateable.h  SceneryNode.cpp  SceneryNode.h
src/Shader/: BasicShader.cpp  BasicShader.h  IShader.h  Shader.cpp  Shader.h
src/Texture/: Texture.cpp  Texture.h
src/VertexArray/: VertexArray.cpp  VertexArray.h
src/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.h
src/VertexBufferLayout/: VertexBufferLayout.h
src/gui/: ColorPicker.cpp  ColorPicker.h  Component.h  ComponentManager.cpp  ComponentManager.h  FloatSlider.cpp  FloatSlider.h  FrameData.cpp  FrameData.h  Log.cpp  Log.h  Window.cpp  Window.h
tests/: CMakeLists.txt  README.md
tests/src/: testJollyEngine.cpp
tests/src/Scenery/: TestSceneryNode.cpp
